# TP-Assist

./: README.md  index.html
backend/: .env.name  main.py  pyproject.toml  requirements.txt  setup.py
backend/Routes/: main_router.py  travel_router.py
backend/config/: config.yaml
backend/exception/: __init__.py  exceptionhander.py
backend/notebook/: experiments.ipynb
backend/prompt_library/: prompt.py
backend/tools/: __init__.py  place_search_tool.py
backend/utils/: place_info_search.py  save_to_document.py
frontend/: README.md
frontend/src/: index.css
frontend/src/components/: AIAssistant.tsx  DestinationCard.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/pages/: Recommendations.tsx  SettingsPage.tsx
src/: App.tsx
src/components/: AIAssistant.tsx  Header.tsx
src/pages/: CalendarPage.tsx  Dashboard.tsx  Itinerary.tsx  Trips.tsx
